// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadersAttributeFormatter getDrawerConfiguration - td headers=headers role=null id=id 1`] = `
{
  "failureBoxConfig": undefined,
  "outlineColor": "#6600CC",
  "outlineStyle": "solid",
  "showVisualization": true,
  "textAlign": "right",
  "textBoxConfig": {
    "background": "#6600CC",
    "fontColor": "#FFFFFF",
    "text": "td",
  },
}
`;

exports[`TableHeadersAttributeFormatter getDrawerConfiguration - td headers=headers role=null id=null 1`] = `
{
  "failureBoxConfig": undefined,
  "outlineColor": "#6600CC",
  "outlineStyle": "solid",
  "showVisualization": true,
  "textAlign": "right",
  "textBoxConfig": {
    "background": "#6600CC",
    "fontColor": "#FFFFFF",
    "text": "td",
  },
}
`;

exports[`TableHeadersAttributeFormatter getDrawerConfiguration - th headers=headers role=null id=id 1`] = `
{
  "failureBoxConfig": undefined,
  "outlineColor": "#0066CC",
  "outlineStyle": "solid",
  "showVisualization": true,
  "textAlign": "right",
  "textBoxConfig": {
    "background": "#0066CC",
    "fontColor": "#FFFFFF",
    "text": "th",
  },
}
`;

exports[`TableHeadersAttributeFormatter getDrawerConfiguration - th headers=null role=null id=id 1`] = `
{
  "failureBoxConfig": undefined,
  "outlineColor": "#0066CC",
  "outlineStyle": "solid",
  "showVisualization": true,
  "textAlign": "right",
  "textBoxConfig": {
    "background": "#0066CC",
    "fontColor": "#FFFFFF",
    "text": "th",
  },
}
`;
